--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -65,11 +65,9 @@ jobs:
         mv artifact/java-hello-world-1.0-SNAPSHOT.jar java-hello-world/target
         docker build -t java-hello-world . --tag gcr.io/$GKE_PROJECT/$IMAGE
     - name: Authenticate into Google Cloud Platform
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        version: '278.0.0'
-        service_account_email: $GCLOUD_EMAIL
-        service_account_key: $GCLOUD_AUTH
+      uses: actions/gcloud/auth@master
+      env:
+        GCLOUD_AUTH: $GCLOUD_AUTH
     - name: Configure Docker to use Google Cloud Platform
       with:
         args: "auth configure-docker --quiet"
