--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -63,10 +63,10 @@ jobs:
         mkdir -p java-hello-world/target
         mv artifact/java-hello-world-1.0-SNAPSHOT.jar java-hello-world/target
         docker build -t java-hello-world . --tag gcr.io/$GKE_PROJECT/$IMAGE
-    - name: Authenticate into Google Cloud Platform
-      uses: actions/gcloud/auth@master
-      env:
-        GCLOUD_AUTH: $GCLOUD_AUTH
+    - name: Setup gcloud environment
+      uses: GoogleCloudPlatform/github-actions@0.1.1
+      with:
+        service_account_key: $GCLOUD_AUTH
     - name: Configure Docker to use Google Cloud Platform
       uses: actions/gcloud/cli@master
       with:
