--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,11 +66,9 @@ jobs:
     - name: Setup gcloud environment
       uses: GoogleCloudPlatform/github-actions@0.1.1
       with:
-        service_account_key: $GCLOUD_AUTH
-    - name: Configure Docker to use Google Cloud Platform
-      uses: actions/gcloud/cli@master
-      with:
-        args: "auth configure-docker --quiet"
+        service_account_key: $GCLOUD_AUTH  
+    - run: |
+        gcloud auth configure-docker
     - name: Publish
       run: |
         docker push gcr.io/$GKE_PROJECT/$IMAGE:test
