--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 env:
   GKE_PROJECT: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: java-hello-world-cluster
+  GCLOUD_EMAIL: ${{ secrets.GCLOUD_EMAIL }}
   GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
   GKE_ZONE: us-central1-f
   IMAGE: java-hello-world
@@ -66,6 +67,7 @@ jobs:
     - name: Setup gcloud environment
       uses: GoogleCloudPlatform/github-actions@0.1.1
       with:
+        service_account_email: $GCLOUD_EMAIL
         service_account_key: $GCLOUD_AUTH  
     - run: |
         gcloud auth configure-docker
